# mhcseqs

./: .gitignore  AGENTS.md  README.md  build.py  deploy.sh  develop.sh  lint.sh  pyproject.toml  requirements.txt  test.sh
data/: archosaur_gathering_plan.md  archosaur_mhc_audit.md  domain_parser_plan.md  mhcgnomes_3.1.0_failure_report.md  mhcgnomes_3.5.0_evaluation.md  mhcgnomes_benchmark.csv  mhcgnomes_gaps.md  mhcgnomes_improvement_requests.md  mhcgnomes_next_round.md  mhcgnomes_species_param_tests.py  mhcgnomes_unknown_species_report.md  mhcgnomes_unparsed_genes.md  parsing_status_20260327.md  sp_boundary_model.json  sp_ground_truth.csv  sp_ground_truth_enriched.csv  sp_impl_handoff_20260323.md  sp_improvement_plan.md  sp_negative_controls.csv  sp_refinement_status.md  sp_scoring_assessment_20260323.md  sp_sequence_cue_model.json  sp_structural_parser_next_steps.md
docs/: index.html
mhcseqs/: __init__.py  __main__.py  alleles.py  b2m_sequences.csv  diverse_mhc_sequences.csv  domain_grammar.py  domain_parsing.py  download.py  genbank_saha_sequences.csv  groove.py  imgt.py  mouse_h2_sequences.csv  pipeline.py  species.py  validate.py
scripts/: analyze_sp_ground_truth_failures.py  benchmark_mhcgnomes.py  curate_diverse_mhc.py  enrich_sp_ground_truth.py  evaluate_sp_ground_truth.py  evaluate_sp_negative_controls.py  fetch_diverse_mhc.py  fetch_genbank_saha.py  fetch_sp_ground_truth.py  plot_funnel.py  report_counts.py  train_sp_boundary_model.py  train_sp_sequence_cue_model.py  update_readme_counts.py  validate_signal_peptides.py  validate_trp41_signal.py
(+19 files in other folders)
