[project]
name = "mhcseqs"
dynamic = ["version"]
description = "MHC sequence curation and binding groove extraction"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mhcgnomes>=3.12.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
mhcseqs = "mhcseqs.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "mhcseqs.version.__version__"}

[tool.setuptools.packages.find]
include = ["mhcseqs*"]

[tool.setuptools.package-data]
mhcseqs = ["b2m_sequences.csv", "mouse_h2_sequences.csv", "diverse_mhc_sequences.csv"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.10.8",
]
